review some knowledge